--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#F29E94" />
+    <meta name="theme-color" content="#3F51B5" />
     <meta name="description" content="A Powerful To-Do App" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <!--
